[package]
name = "dw"
version = "0.1.0"
edition = "2024"
authors = ["Amirhossein Ghanipour <d3v1ll3n@gmail.com>"]
description = "A blazingly fast download accelerator, written in Rust."
license = "GPL-3.0"
repository = "https://github.com/amirhosseinghanipour/dw"
homepage = "https://github.com/amirhosseinghanipour/dw"
readme = "README.md"
keywords = ["download", "accelerator", "cli", "fast", "parallel"]
categories = ["command-line-utilities"]

[[bin]]
name = "dw"
path = "src/main.rs"



[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
url = "2.4"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
serde_json = "1.0"
tempfile = "3.3"
